--- a/package.json
+++ b/package.json
@@ -10,8 +10,6 @@
   },
   "private": true,
   "dependencies": {
-    "@stomp/stompjs": "^7.0.0",
-    "sockjs-client": "^1.6.1",
     "@angular/animations": "^15.1.0",
     "@angular/common": "^15.1.0",
     "@angular/compiler": "^15.1.0",
@@ -22,6 +20,7 @@
     "@angular/router": "^15.1.0",
     "@ngx-translate/core": "^14.0.0",
     "@ngx-translate/http-loader": "^7.0.0",
+    "@stomp/stompjs": "^7.0.0",
     "bootstrap": "^5.2.3",
     "font-awesome": "^4.7.0",
     "jquery": "^3.6.0",
@@ -33,6 +32,7 @@
     "primeng": "^15.1.1",
     "quill": "^1.3.7",
     "rxjs": "~7.8.0",
+    "sockjs-client": "^1.6.1",
     "tslib": "^2.3.0",
     "zone.js": "~0.12.0"
   },
@@ -42,6 +42,7 @@
     "@angular/compiler-cli": "^15.1.0",
     "@types/jsonwebtoken": "^9.0.1",
     "@types/node": "^18.13.0",
+    "json-server": "^1.0.0-beta.3",
     "typescript": "~4.9.4"
   }
 }
